--- a/SocketServer/pom.xml
+++ b/SocketServer/pom.xml
@@ -7,15 +7,10 @@
         <groupId>com.aliyunm</groupId>
         <version>1</version>
     </parent>
+    <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>SocketServer</artifactId>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
     <dependencies>
         <dependency>
